--- a/download/index.html
+++ b/download/index.html
@@ -9,28 +9,64 @@
         background: linear-gradient(35deg, #103E68, #A52E7D, #f92455c8, #F8644F, #FA534B, #FAA45B, #2780B8, #2B8EC9, #046DB0);
         backdrop-filter: blur(10px);
       }
+      body::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: rgba(0,0,0,.1);
+      }
       .input {
         width: 450px;
-        height: 35px;
-        line-height: 35px;
-        padding: 2px 10px;
-        color: rgba(255,255,255,.8);
-        background: rgba(154,154,154,.3);
+        height: 34px;
+        line-height: 34px;
+        padding: 2px 36px 2px 10px;
+        color: white;
+        background: rgba(86, 86, 86, .4);
         border: 1px solid #f7f7f7;
         outline: none;
         margin-left: 50%;
         margin-top: 200px;
         transform: translateX(-50%);
-        border-radius: 2px;
-        font-size: 18px;
+        border-radius: 4px;
+        font-size: 16px;
       }
       .input::placeholder {
         color: white;
         opacity: .7;
       }
+      .search-btn {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: calc(50vw + 220px);
+        top: 210px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
-    <input type="text" class="input" placeholder="请输入URL" />
+    <input type="text" class="input" id="input-ele" placeholder="请输入URL" />
+    <svg class="search-btn" id="svg-ele" t="1606703733222" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="7064" class="search-btn"><path d="M883.626667 823.04l-145.066667-144.64A337.92 337.92 0 0 0 810.666667 469.333333a341.333333 341.333333 0 1 0-341.333334 341.333334 337.92 337.92 0 0 0 209.066667-72.106667l144.64 145.066667a42.666667 42.666667 0 0 0 60.586667 0 42.666667 42.666667 0 0 0 0-60.586667zM213.333333 469.333333a256 256 0 1 1 256 256 256 256 0 0 1-256-256z" p-id="7065" fill="#ffffff"></path></svg>
   </body>
+  <script>
+    function dl_file() {
+      const ele = document.getElementById('input-ele')
+      const url = ele.value.trim()
+      if (!url) {
+        console.error('url为空')
+        return false
+      }
+      if (/^https?:\/\/[^\s$.?#].[^\s]*$/.test(url)) {
+        window.open(url)
+      } else {
+        console.error('url不合法')
+      }
+    }
+
+    document.getElementById('svg-ele').addEventListener('click', dl_file)
+    document.getElementById('input-ele').addEventListener('keypress', e => {
+      e.key === 'Enter' && dl_file()
+    })
+  </script>
 </html>
