--- a/download/index.html
+++ b/download/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Download</title>
+    <meta charset="utf-8">
     <style type="text/css">
       body {
         margin: 0;
